<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/cof"
    tools:context="com.example.hp.birthdaycard.MainActivity"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <EditText
        android:id="@+id/name_Edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"

        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        style="@style/headerTextStyle"
        android:text="@string/toppings"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/white"
        />


    <CheckBox
        android:id="@+id/whipped_checkbox_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:textSize="16sp"
        android:paddingLeft="24dp"
        android:buttonTint="@android:color/white"
        android:textColor="@android:color/white"
        />
    <CheckBox
        android:id="@+id/choclate_checkbox_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate_cream"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:paddingLeft="24dp"
        android:buttonTint="@android:color/white"
        android:textColor="@android:color/white"
        />


    <TextView
        android:id="@+id/textView"
        android:text="@string/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/headerTextStyle"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:onClick="decrement"

            android:text="@string/minus" />


        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/quantity_value"
            android:textAppearance="?android:attr/textAppearanceSmall"

            android:textColor="@android:color/white"

            android:textSize="16sp" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:onClick="increment"
            android:text="@string/plus" />
    </LinearLayout>

    <!--  <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Order Summary"
         android:textAllCaps="true"

         android:textColor="@android:color/white"
         android:textSize="16sp" />

    <TextView
         android:id="@+id/order_summary_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="0"
         android:textColor="@android:color/white"


         android:textSize="16sp" />
 -->
    <Button
        android:id="@+id/button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/order" />

</LinearLayout>
</ScrollView>